# zephyr-course

./: .gitignore  README.md  l2-task_README.md  l3-task_README.md  l4-task_README.md  l6-task1_README.md
app/: CMakeLists.txt  Kconfig  app.overlay  l6-task2_README.md  prj.conf
app/src/: main.c  main.cpp
boards/: CMakeLists.txt
boards/our_custom_board/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.our_custom_board  board.cmake  board.yml  our_custom_board-pinctrl.dtsi  our_custom_board.dts  our_custom_board.yaml  our_custom_board_defconfig
boards/scratch_board/: CMakeLists.txt  Kconfig.defconfig  Kconfig.scratch_board  board.c  board.cmake  board.yml  scratch_board-pinctrl.dtsi  scratch_board.dts  scratch_board.yaml
our-driver-module/: CMakeLists.txt  Kconfig
our-driver-module/drivers/our_driver/: CMakeLists.txt  Kconfig  our_driver.c
our-driver-module/dts/bindings/driver/: our,driver.yaml
our-driver-module/include/our_drivers/: our_driver.h
