list(APPEND BOARD_ROOT F:/swaroopb_zephyr/zephyr-course) 
list(APPEND ZEPHYR_EXTRA_MODULES F:/swaroopb_zephyr/zephyr-course/our-driver-module) 
cmake_minimum_required(VERSION 3.20.0) 
find_package(Zephyr REQUIRED HINTS F:/swaroopb_zephyr/zephyr-course/zephyr) 
project(app) 
target_sources(app PRIVATE src/main.c) 
target_include_directories(app PRIVATE F:/swaroopb_zephyr/zephyr-course/our-driver-module/include) 
